--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "Kushal Resume"
+description: "Kushal Sharma"
 
 # Build settings
 markdown: kramdown
@@ -23,7 +23,23 @@ resume_contact_telephone:       "+91 9358866021"
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>👨‍💻Android Developer | ✨ Innovator | 🚀 Explorer
+
+I'm Kushal Sharma, a tech enthusiast with a knack for coding and a passion for innovation. As a Computer Science student, I've delved into the digital realm, mastering languages like Java, C++, Python, and more.
+
+🎓 My Background: Bachelor of Technology in Computer Science, Rajasthan Institute of Engineering and Technology.
+
+🌟 Skills: Android app development, data structures, Object oriented PRogramming, Machine learning, and more.
+
+🌐 My Soft Skills: Leadership, event management, public speaking - I bring the whole package.
+
+🌟 Passion: Adaptable, always learning, and forever hungry for growth.
+
+Let's create, innovate, and make tech magic together. Feel free to connect with me on professional networks or explore my work on code-sharing platforms.
+
+This version of the summary maintains a concise and creative snapshot of your skills and passions without mentioning your project experience or contact information. It's designed to engage the reader's interest and encourage them to seek more information through the provided networks and platforms.
+
+</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -37,10 +53,10 @@ resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
 resume_section_skills:          true
-resume_section_recognition:     false
-resume_section_links:           false
-resume_section_associations:    false
-# resume_section_interests:       true
+# resume_section_recognition:     false
+# resume_section_links:           false
+# resume_section_associations:    false
+resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
@@ -51,7 +67,7 @@ resume_social_links:
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/kushal-0602-sharma"
   # resume_instagram_url:         "insert your Instagram URL here"
-  # resume_website_url:           "http://joelglovier.com"
+  resume_website_url:           "https://drive.google.com/file/d/1rNy-Co5wSeyzR2rrKSIjQbklqfwmWRVJ/view?usp=sharing"
   # resume_medium_url:            "https://medium.com/@jglovier"
 resume_print_social_links:      true
 
