--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,32 +1,33 @@
-Skills
-Technical Skills:
-- skill: Android
-- skill: Kotlin
-- skill: Java
-- skill: ROOM
-- skill: Firebase
-- skill: JetPack Compose
-- skill: SQLite
-- skill: MySQL
-- skill: SQL
-- skill: C++ Programming
-- skill: Machine Learning
-- skill: Git
-- skill: GitHub
-- skill: Database Management System (DBMS)
-- skill: Figma
-- skill: Animation
-- skill: Adobe Photoshop
-- skill: Cloud Computing
-- skill: Blockchain
-- skill: Amazon Web Services (AWS)
-- skill: Python
+Skills:
+  Technical Skills:
+    - skill: Android
+    - skill: Kotlin
+    - skill: Java
+    - skill: ROOM
+    - skill: Firebase
+    - skill: JetPack Compose
+    - skill: SQLite
+    - skill: MySQL
+    - skill: SQL
+    - skill: C++ Programming
+    - skill: Machine Learning
+    - skill: Git
+    - skill: GitHub
+    - skill: Database Management System (DBMS)
+    - skill: Figma
+    - skill: Animation
+    - skill: Adobe Photoshop
+    - skill: Cloud Computing
+    - skill: Blockchain
+    - skill: Amazon Web Services (AWS)
+    - skill: Python
 
-Soft Skills:
-- skill: Leadership
-- skill: Event Management
-- skill: Writing
-- skill: Public Speaking
-- skill: Time Management
+  Soft Skills:
+    - skill: Leadership
+    - skill: Event Management
+    - skill: Writing
+    - skill: Public Speaking
+    - skill: Time Management
+
 # # Digital content development and creation
 # - skill: Digital content development and creation
