--- a/_config.yml
+++ b/_config.yml
@@ -23,23 +23,17 @@ resume_contact_telephone:       "+91 9358866021"
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>👨‍💻Android Developer | ✨ Innovator | 🚀 Explorer
+resume_header_intro: |
+  <p>👨‍💻 Android Developer | ✨ Innovator | 🚀 Explorer<br>
+  I'm Kushal Sharma, a tech enthusiast with a flair for coding and a passion for innovation. With a Bachelor of Technology in Computer Science, I've mastered languages like Java, C++, Python, and more.<br>
+  <br>
+  🌟 Skills: Android app development, data structures, Object-oriented Programming, Machine learning, and more.<br>
+  🌐 Soft Skills: Leadership, event management, public speaking - a versatile skill set.<br>
+  🌟 Passion: Adaptable, always learning, and driven by a hunger for growth.<br>
+  <br>
+  Let's create and innovate together. Connect with me on professional networks or explore my work on code-sharing platforms.<br>
+  </p>
 
-I'm Kushal Sharma, a tech enthusiast with a knack for coding and a passion for innovation. As a Computer Science student, I've delved into the digital realm, mastering languages like Java, C++, Python, and more.
-
-🎓 My Background: Bachelor of Technology in Computer Science, Rajasthan Institute of Engineering and Technology.
-
-🌟 Skills: Android app development, data structures, Object oriented PRogramming, Machine learning, and more.
-
-🌐 My Soft Skills: Leadership, event management, public speaking - I bring the whole package.
-
-🌟 Passion: Adaptable, always learning, and forever hungry for growth.
-
-Let's create, innovate, and make tech magic together. Feel free to connect with me on professional networks or explore my work on code-sharing platforms.
-
-This version of the summary maintains a concise and creative snapshot of your skills and passions without mentioning your project experience or contact information. It's designed to engage the reader's interest and encourage them to seek more information through the provided networks and platforms.
-
-</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -56,7 +50,7 @@ resume_section_skills:          true
 # resume_section_recognition:     false
 # resume_section_links:           false
 # resume_section_associations:    false
-resume_section_interests:       true
+# resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
