--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -3,36 +3,19 @@ Skills:
     Mobile App Development:
       - skill: Android
     Programming Languages:
-      - skill: Java
-      - skill: Kotlin
-      - skill: C++
-      - skill: Python
+      - skill: Java,Kotlin,C++
     Databases:
-      - skill: SQLite
-      - skill: MySQL
-      - skill: Firebase
+      - skill: ROOM, SQLite, MySQL, Firebase, FireStore
     Frameworks and Libraries:
-      - skill: Android Jetpack
-      - skill: Room
-      - skill: Firebase
-      - skill: JetPack Compose
+      - skill: Android Jetpack, Lottie Animation, JetPack Compose
     Version Control:
-      - skill: Git
-      - skill: GitHub
+      - skill: Git, GitHub
   Soft Skills:
-    - skill: Leadership
-    - skill: Event Management
-    - skill: Public Speaking
-    - skill: Time Management
-    - skill: Teamwork
+    - skill: Leadership, Event Management, Public Speaking, Time Management,Teamwork
   Design Tools:
-    - skill: Figma
-    - skill: Adobe Photoshop
+    - skill: Figma, Adobe Photoshop
   Other Skills:
-    - skill: Machine Learning
-    - skill: Cloud Computing
-    - skill: Blockchain
-    - skill: Amazon Web Services (AWS)
+    - skill: Machine Learning, Cloud Computing, Blockchain, Amazon Web Services (AWS)
 
 # # Digital content development and creation
 # - skill: Digital content development and creation
