--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,23 @@
-Skills
-Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
 
-Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+# Skills
+# Technical Skills
+#     Mobile App Development:
+#       - skill: Android
+#     Programming Languages:
+#       - skill: Java, Kotlin, C++
+#     Databases:
+#       - skill: ROOM, SQLite, MySQL, Firebase, FireStore
+#     Frameworks and Libraries:
+#       - skill: Android Jetpack, Lottie Animation, JetPack Compose
+#     Version Control:
+#       - skill: Git, GitHub
+# Soft Skills
+#     - skill: Leadership, Event Management, Public Speaking, Time Management, Teamwork
+# Design Tools
+#     - skill: Figma, Adobe Photoshop
+# Other Skills
+#     - skill: Machine Learning, Cloud Computing, Blockchain, Amazon Web Services (AWS)
 
-Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+
+# # Digital content development and creation
+# - skill: Digital content development and creation
